Footer overlap on main content fixed

--- a/kasa/my-app/src/components/MainContent/MainContent.scss
+++ b/kasa/my-app/src/components/MainContent/MainContent.scss
@@ -6,6 +6,8 @@
     max-width: 1440px;
     width: 90%;
     margin: 0 auto;
+    padding-bottom: 3rem;
+
 
 
     .body-banner{
